--- a/css/main.css
+++ b/css/main.css
@@ -24,12 +24,12 @@
   pointer-events: none;
 }
 
-.footer-input::placeholder, .about-soc-item, .about-soc-list, .connect__contacts, .menu, .nav {
+.footer-input::placeholder, .block-svg, .connect__contacts, .menu, .nav {
   display: flex;
   align-items: center;
 }
 
-.check-text span, .check-text, .clients-link, .team-soc-link, .header-container, .modal-btn, .modal-close-btn, .footer-btn {
+.check-text span, .check-text, .clients-link, .team-soc-link, .about-soc-list, .header-container, .modal-btn, .modal-close-btn, .footer-btn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -335,10 +335,6 @@ body {
   display: flex;
 }
 
-.about-item {
-  max-width: 270px;
-}
-
 .about-title {
   font-family: "Roboto";
   font-style: normal;
@@ -361,21 +357,14 @@ body {
   color: #757575;
 }
 
-.about-item:not(:last-child) {
-  margin-right: 30px;
-}
-
 .about-soc-list {
-  justify-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 .about-soc-item {
-  width: 270px;
-  height: 120px;
-  background: #F5F4FA;
-  margin-left: 30px;
-  margin-bottom: 30px;
-  justify-content: center;
+  max-width: 100%;
+  max-height: 100%;
 }
 @media screen and (min-width: 768px) {
   .about-soc-item {
@@ -387,8 +376,13 @@ body {
     width: calc((100% - 90px) / 4);
   }
 }
-.about-soc-item .about-soc-item:first-child {
-  margin-left: 0px;
+
+.block-svg {
+  width: 100%;
+  height: 120px;
+  background: #F5F4FA;
+  margin-bottom: 30px;
+  justify-content: center;
 }
 
 .work {
@@ -637,7 +631,6 @@ body {
   height: 100%;
   background: #FFFFFF;
   border: 1px solid #EEEEEE;
-  margin-bottom: 30px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: calc((100% - 30px) / 1);
 }
@@ -690,6 +683,25 @@ body {
   padding-top: 20px;
   padding-right: 24px;
   padding-bottom: 20px;
+  flex-grow: 1;
+  -webkit-box-flex: 1;
+}
+
+.portfolio-link {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  text-decoration: none;
+  color: #212121;
+  -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer {
