--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -7,9 +7,7 @@
      display: flex;
  }
 
-.about-item{
-    max-width: 270px;
-}
+
 
 .about-title
 {
@@ -36,29 +34,32 @@
     
 }
 
-.about-item:not(:last-child){
-    margin-right: 30px;
-}
 
 .about-soc-list{
+    @extend %justify-list ;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+.about-soc-item{
+    max-width: 100%;
+    max-height: 100%;
+    @media screen and (min-width: 768px) {
+        width: calc((100% - 30px) / 2);
+      }
+      @media screen and (min-width: 1200px) {
+        width: calc((100% - 90px) / 4);}
+}
+
+.block-svg{
+    width: 100%;
+     height: 120px;
+     background: #F5F4FA;
+ 
+    margin-bottom: 30px;
     @extend %aligin-list;
     justify-content: center;
-}
-.about-soc-item{
-width: 270px;
-height: 120px;
-background: #F5F4FA;
-margin-left: 30px;
-margin-bottom: 30px;
-@extend %aligin-list;
-justify-content: center;
-@media screen and (min-width: 768px) {
-    width: calc((100% - 30px) / 2);
-}
-@media screen and (min-width: 1200px) {
-    width: calc((100% - 90px) / 4);
-}
-.about-soc-item:first-child{
-margin-left: 0px;
-}
-}
+  
+    }
+    
+
