--- a/sass/components/_pictures.scss
+++ b/sass/components/_pictures.scss
@@ -21,7 +21,6 @@ width: 100%;
 height: 100%;
 background: #FFFFFF;
 border: 1px solid #EEEEEE;
-margin-bottom: 30px;
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 &:hover, &:focus{
     border: 1px solid #EEEEEE;
@@ -77,5 +76,24 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding-top: 20px;
     padding-right: 24px;
     padding-bottom: 20px;
+    flex-grow: 1;
+    -webkit-box-flex: 1;
     
+}
+
+.portfolio-link{
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    text-decoration: none;
+    color: #212121;
+    -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
