--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -1,6 +1,14 @@
 .about{
     padding-bottom: 94px;
     padding-top: 94px;
+    @include mobile{
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+    @include tablet{
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
  }
 
  .about-list{
