--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -10,6 +10,7 @@
     letter-spacing: 0.06em;
     color: #FFFFFF;
     background-color: #2196F3;
+    text-align: center;
     }
 
     .footer-btn{
