--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,14 +1,14 @@
 .clients{
     padding-top: 94px;
     padding-bottom: 94px;
-    @media screen and (min-width: 768px) {
-        padding-top: 100px;
-        padding-bottom: 100px;
-      }
-      @media screen and (min-width: 1200px) {
-        padding-top: 130px;
-        padding-bottom: 130px;
-      }
+    @include mobile {
+      padding-top: 60px;
+      padding-bottom: 60px;
+    }
+  @include tablet{
+      padding-top: 60px;
+      padding-bottom: 60px;
+  }
     } 
     
     .clients-title{
