--- a/sass/components/_main_title.scss
+++ b/sass/components/_main_title.scss
@@ -6,22 +6,72 @@
     letter-spacing: 0.06em;
     color: #FFFFFF;
     text-transform: uppercase;
+    text-align: center;
+   
+ @include mobile {
+    font-size: 26px;
+    line-height: 1.62;
+    margin-bottom: 30px;
+    
+ }
+ @include tablet {
+   font-size: 26px;
+   line-height: 1.62;
+   margin-bottom: 30px;
+   padding-left: 204px;
+   padding-right: 204px;
+ }
+ @include desktop {
+    font-size: 44px;
+    line-height: 1.36;
     padding-left: 235px;
     padding-right: 235px;
     margin-bottom: 40px;
-
+ }
 }
 .main .container{
-    padding-top: 200px;
-    padding-bottom: 200px;
-    text-align: center;}
+    
+    text-align: center;
+    @include mobile {
+        width: 480px;
+      }
+    @include tablet{
+        width: 768px;
+    }
+    @include desktop {
+       width: 1200px;
+    }
+}
 
 .main{
-
 background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main_bg.png);
 background-repeat: no-repeat;
 object-fit: cover;
 background-size: cover ;
 background-position: 50% 50%;
-
+flex-grow: 1;
+@include mobile {
+    padding-top: 118px;
+    padding-bottom: 118px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main-bg-mob.png);
+    @include retina {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main-bg-mob-2x.png);
+    }
+  }
+@include tablet{
+    padding-top: 118px;
+    padding-bottom: 118px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main-bg-tab.png);
+    @include retina{
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main-bg-tab-2x.png);
+    }
+}
+@include desktop{
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main_bg.png);
+    @include retina {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main-bg-desk-2x.png);
+    }
+}
 }
