--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -2,14 +2,14 @@
     padding-top: 94px;
     padding-bottom: 94px;
     background: #F5F4FA;
-    @media screen and (min-width: 768px) {
-        padding-top: 100px;
-        padding-bottom: 100px;
-      }
-      @media screen and (min-width: 1200px) {
-        padding-top: 130px;
-        padding-bottom: 130px;
-      }
+  @include mobile {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+@include tablet{
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
 }
 
 .team-title
