--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import './utils/variables';
 @import './utils/hidden';
 @import './utils/placeholders';
+@import './utils/mixins';
 
 @import './base/reset';
 @import './base/common';
