--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,6 +1,5 @@
 .team {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    
     background: #F5F4FA;
   @include mobile {
     padding-top: 60px;
@@ -9,6 +8,10 @@
 @include tablet{
     padding-top: 60px;
     padding-bottom: 60px;
+}
+@include desktop{
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 }
 
