--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,8 @@
 
 @import './components/header';
 
+@import './components/mob-menu';
+
 @import './components/main_title';
 
 @import './components/about';
