--- a/css/main.css
+++ b/css/main.css
@@ -74,19 +74,19 @@ body {
 }
 
 .container {
-  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 @media screen and (min-width: 480px) {
   .container {
-    max-width: 448px;
+    max-width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
   .container {
-    max-width: 720px;
+    max-width: 768px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -298,6 +298,111 @@ body {
 
 .connect__contacts-icon {
   fill: currentColor;
+}
+
+.mob-menu-open__btn {
+  display: block;
+  margin-left: auto;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  fill: #000000;
+  background-color: transparent;
+}
+
+.mob-menu {
+  position: fixed;
+  background-color: #FFFFFF;
+  top: 0%;
+  left: 0%;
+  width: 100vw;
+  height: 100vh;
+  z-index: 2;
+  padding-top: 48px;
+  padding-left: 40px;
+  padding-bottom: 48px;
+  padding-right: 83px;
+}
+
+.mob-menu-close__btn {
+  display: block;
+  margin-left: auto;
+  margin-bottom: 8px;
+  background-color: transparent;
+  border: 0px;
+}
+.mob-menu-close__btn:focus {
+  fill: #2196F3;
+}
+.mob-menu-close__btn:hover {
+  fill: #2196F3;
+}
+
+.mob-menu__item {
+  margin-bottom: 32px;
+}
+.mob-menu__item:last-child {
+  margin-bottom: 302px;
+}
+
+.active {
+  color: #2196F3;
+}
+
+.mob-menu__item-list {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+.mob-menu__item-list:focus {
+  color: #2196F3;
+}
+.mob-menu__item-list:hover {
+  color: #2196F3;
+}
+
+.mob-connect-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-connect__contacts {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #2196F3;
+}
+
+.mob-connect__mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.mob-soc-list {
+  margin-top: 64px;
+  display: flex;
+}
+
+.mob-soc-item {
+  padding-right: 10px;
+  margin-left: 10px;
+}
+.mob-soc-item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mob-soc-contacts {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196F3;
 }
 
 .main__title {
@@ -533,8 +638,6 @@ body {
 }
 
 .team {
-  padding-top: 94px;
-  padding-bottom: 94px;
   background: #F5F4FA;
 }
 @media screen and (min-width: 480px) {
@@ -547,6 +650,12 @@ body {
   .team {
     padding-top: 60px;
     padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team {
+    padding-top: 94px;
+    padding-bottom: 94px;
   }
 }
 
@@ -811,6 +920,26 @@ body {
 
 .footer-container {
   display: flex;
+  flex-wrap: wrap;
+}
+@media screen and (min-width: 480px) {
+  .footer-container {
+    width: 480px;
+    flex-direction: column;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer-container {
+    width: 768px;
+    flex-direction: row;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-container {
+    width: 1200px;
+    justify-content: flex-start;
+  }
 }
 
 .footer-position {
@@ -858,13 +987,53 @@ body {
 .footer-list {
   margin-top: 20px;
 }
+@media screen and (min-width: 480px) {
+  .footer-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-list {
+    display: block;
+  }
+}
 
 .footer-position-list {
   margin-bottom: 9px;
 }
 
-.footer-soc {
-  margin-left: 70px;
+@media screen and (min-width: 480px) {
+  .footer-soc {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 60px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer-soc {
+    margin-left: 165px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-soc {
+    margin-left: 70px;
+    display: block;
+    margin-top: 12px;
+  }
 }
 
 .footer-title {
@@ -877,7 +1046,6 @@ body {
   text-transform: uppercase;
   color: #FFFFFF;
   margin-bottom: 20px;
-  margin-top: 12px;
 }
 
 .footer-soc-list {
@@ -922,7 +1090,6 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #FFFFFF;
-  margin-top: 12px;
   margin-bottom: 20px;
 }
 
@@ -931,7 +1098,7 @@ body {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: transparent;
-  width: 358px;
+  width: 100%;
   height: 50px;
   padding-left: 16px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -952,17 +1119,87 @@ body {
 .footer-input:focus::placeholder {
   color: #FFFFFF;
 }
+@media screen and (min-width: 480px) {
+  .footer-input {
+    margin-bottom: 20px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer-input {
+    margin-bottom: 30px;
+  }
+}
 
-.footer-link {
-  margin-left: 93px;
+@media screen and (min-width: 480px) {
+  .footer-link {
+    margin-top: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer-link {
+    display: flex;
+    flex-direction: column;
+    margin-top: 60px;
+    flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-link {
+    display: block;
+    margin-top: 12px;
+    margin-left: 93px;
+  }
 }
 
 .footer-form {
   display: flex;
 }
+@media screen and (min-width: 480px) {
+  .footer-form {
+    flex-direction: column;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer-form {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-form {
+    flex-direction: row;
+    align-items: baseline;
+    flex-wrap: nowrap;
+  }
+}
 
 .footer-btn-svg {
   margin-left: 10px;
+}
+
+@media screen and (min-width: 480px) {
+  .footer-container-logo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer-container-logo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-container-logo {
+    display: block;
+  }
 }
 
 .backdrop {
