--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,13 +1,14 @@
 .container {
-    width: 100%;
+
     padding-left: 15px;
     padding-right: 15px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
     @include mobile {
-        max-width: 448px;
+        max-width: 480px;
       }
       @include tablet {
-        max-width: 720px;
+        max-width: 768px;
       }
       @include desktop {
         max-width: 1200px;
