--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,10 +2,28 @@
     background-color: #2F303A;
     padding-top: 60px;
     padding-bottom: 60px;
+    
    
 }
 .footer-container{
     display: flex;
+    flex-wrap: wrap;
+    @include mobile {
+        width: 480px;
+        flex-direction: column;
+        
+      }
+    @include tablet{
+        width: 768px;
+        flex-direction: row;
+        justify-content: center;
+        
+    }
+    @include desktop {
+       width: 1200px;
+       justify-content: flex-start;
+    }
+    
 }
     .footer-position
 {
@@ -50,6 +68,20 @@
 
 .footer-list{
     margin-top: 20px;
+@include mobile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+    @include tablet{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    @include desktop{
+        display: block;
+    }
    
 }
 .footer-position-list{
@@ -57,7 +89,26 @@
 }
 
 .footer-soc{
-margin-left: 70px;
+    @include mobile{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 60px;
+    }
+
+@include tablet{
+    margin-left: 165px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5px;
+}
+
+@include desktop {
+    margin-left: 70px;
+    display: block;
+    margin-top: 12px;
+}
 
 }
 .footer-title{
@@ -70,7 +121,7 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #FFFFFF;
 margin-bottom: 20px;
-margin-top: 12px;
+
 }
 
 .footer-soc-list{
@@ -114,7 +165,7 @@ line-height: 1.14;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #FFFFFF;
-margin-top: 12px;
+
 margin-bottom: 20px;
 
 }
@@ -124,7 +175,7 @@ border: 1px solid rgba(255, 255, 255, 0.3);
 filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 border-radius: 4px;
 background-color: transparent;
-width: 358px;
+width: 100%;
 height: 50px;
 padding-left: 16px;
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
@@ -145,17 +196,81 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
     &:focus::placeholder{
         color: #FFFFFF;
     }
+@include mobile{
+ margin-bottom: 20px;
+}
+
+    @include tablet{
+        margin-bottom: 30px;
+           }
 
 }
 
 .footer-link{
-    margin-left: 93px;
+    
+    
+    @include mobile{
+margin-top: 60px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+
+    }
+
+    @include tablet{
+        display: flex;
+        flex-direction: column;
+        margin-top: 60px;
+
+ flex-wrap: wrap;
+    }
+    @include desktop{
+display: block;
+margin-top: 12px;
+margin-left: 93px;
+    }
 }
 
 .footer-form{
     display: flex;
+    
+@include mobile{
+    flex-direction: column;
+}
+
+    @include tablet{
+    flex-direction: row;
+    
+    flex-wrap: wrap;
+    justify-content: center;
+    }
+    @include desktop{
+flex-direction: row;
+align-items: baseline;
+flex-wrap: nowrap;
+    }
+
 }
 
 .footer-btn-svg{
     margin-left: 10px;
+}
+
+.footer-container-logo{
+
+    @include mobile {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    @include tablet{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    @include desktop{
+        display: block;
+    }
 }
