--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -53,6 +53,7 @@
         }
         
         .button-list{padding-top: 60px;   
+            padding-bottom: 60px;
              @media screen and (min-width: 768px) {
            
           }
