--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@
   align-items: center;
 }
 
-.check-text span, .check-text, .clients-link, .team-soc-link, .about-soc-list, .header-container, .modal-btn, .modal-close-btn, .footer-btn {
+.check-text span, .check-text, .clients-link, .team-soc-link, .modal-btn, .modal-close-btn, .footer-btn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -78,6 +78,7 @@ body {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+  width: 100%;
 }
 @media screen and (min-width: 480px) {
   .container {
@@ -204,6 +205,11 @@ body {
   border: 1px solid #ECECEC;
   padding-top: 24px;
   padding-bottom: 24px;
+  display: flex;
+}
+
+.header-container {
+  display: flex;
 }
 
 .nav__logo {
@@ -223,6 +229,12 @@ body {
 
 .nav__logo__span {
   color: #212121;
+}
+
+@media screen and (max-width: 768px) {
+  .menu {
+    display: none;
+  }
 }
 
 .menu__item-list {
@@ -291,10 +303,32 @@ body {
 .connect__contacts:hover, .connect__contacts:focus {
   color: #2196F3;
 }
+@media screen and (min-width: 768px) {
+  .connect__contacts {
+    margin-left: 84px;
+  }
+  .connect__contacts:not(:first-child) {
+    margin-top: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .connect__contacts {
+    margin-left: 30px;
+  }
+  .connect__contacts:not(:first-child) {
+    margin-top: 0px;
+  }
+}
 
 .connect {
   margin-left: auto;
   display: flex;
+  flex-wrap: wrap;
+}
+@media screen and (max-width: 768px) {
+  .connect {
+    display: none;
+  }
 }
 
 .connect__contacts-span {
@@ -309,11 +343,15 @@ body {
   display: block;
   margin-left: auto;
   border: none;
-  display: flex;
   justify-content: center;
   align-items: center;
   fill: #000000;
   background-color: transparent;
+}
+@media screen and (min-width: 768px) {
+  .mob-menu-open__btn {
+    display: none;
+  }
 }
 
 .mob-menu {
@@ -546,6 +584,11 @@ body {
   text-transform: uppercase;
   margin-bottom: 10px;
 }
+@media screen and (max-width: 767px) {
+  .about-title {
+    text-align: center;
+  }
+}
 
 .about-text {
   font-family: "Roboto";
@@ -558,13 +601,13 @@ body {
 }
 
 .about-soc-list {
+  display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
 
 .about-soc-item {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
 }
 @media screen and (min-width: 768px) {
   .about-soc-item {
@@ -1107,7 +1150,7 @@ body {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: transparent;
-  width: 100%;
+  width: 450px;
   height: 50px;
   padding-left: 16px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1166,6 +1209,7 @@ body {
 
 .footer-form {
   display: flex;
+  align-items: center;
 }
 @media screen and (min-width: 480px) {
   .footer-form {
