--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -18,7 +18,8 @@
 
 
 .about-title
-{
+{ 
+    @media screen and (max-width: 767px) {text-align: center;}
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
@@ -44,14 +45,13 @@
 
 
 .about-soc-list{
-    @extend %justify-list ;
+    display: flex;
     flex-wrap: wrap;
     gap: 30px;
 }
 
 .about-soc-item{
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
     @media screen and (min-width: 768px) {
         width: calc((100% - 30px) / 2);
       }
