--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -175,7 +175,7 @@ border: 1px solid rgba(255, 255, 255, 0.3);
 filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 border-radius: 4px;
 background-color: transparent;
-width: 100%;
+width: 450px;
 height: 50px;
 padding-left: 16px;
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
@@ -234,6 +234,7 @@ margin-left: 93px;
 
 .footer-form{
     display: flex;
+    align-items: center;
     
 @include mobile{
     flex-direction: column;
