--- a/sass/components/_mob-menu.scss
+++ b/sass/components/_mob-menu.scss
@@ -2,13 +2,13 @@
     display: block;
     margin-left: auto;
     border: none;
-    display: flex;
     justify-content: center;
     align-items: center;
     fill: #000000;
     background-color: transparent;
-    
-    
+    @media screen and (min-width: 768px) {
+        display: none;
+    }
 }
 
 .mob-menu{
