--- a/css/main.css
+++ b/css/main.css
@@ -972,12 +972,12 @@ body {
 
 .footer-container {
   display: flex;
-  flex-wrap: wrap;
 }
 @media screen and (min-width: 480px) {
   .footer-container {
     width: 480px;
     flex-direction: column;
+    flex-wrap: wrap;
   }
 }
 @media screen and (min-width: 768px) {
@@ -991,6 +991,7 @@ body {
   .footer-container {
     width: 1200px;
     justify-content: flex-start;
+    flex-wrap: nowrap;
   }
 }
 
@@ -1209,16 +1210,17 @@ body {
 
 .footer-form {
   display: flex;
-  align-items: center;
 }
 @media screen and (min-width: 480px) {
   .footer-form {
     flex-direction: column;
+    align-items: center;
   }
 }
 @media screen and (min-width: 768px) {
   .footer-form {
     flex-direction: row;
+    align-items: baseline;
     flex-wrap: wrap;
     justify-content: center;
   }
