--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -7,11 +7,11 @@
 }
 .footer-container{
     display: flex;
-    flex-wrap: wrap;
+    
     @include mobile {
         width: 480px;
         flex-direction: column;
-        
+        flex-wrap: wrap;
       }
     @include tablet{
         width: 768px;
@@ -22,6 +22,7 @@
     @include desktop {
        width: 1200px;
        justify-content: flex-start;
+       flex-wrap: nowrap;
     }
     
 }
@@ -234,15 +235,15 @@ margin-left: 93px;
 
 .footer-form{
     display: flex;
-    align-items: center;
     
 @include mobile{
     flex-direction: column;
+    align-items: center;
 }
 
     @include tablet{
     flex-direction: row;
-    
+    align-items: baseline;
     flex-wrap: wrap;
     justify-content: center;
     }
