--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -19,12 +19,24 @@
 {
     font-style: normal;
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    letter-spacing: 0.03em;
+    
     color: #212121;
     text-align: center;
-    margin-bottom: 50px;
+    
+
+    @include mobile{
+        font-size: 28px;
+line-height: 1.17;
+letter-spacing: 0.03em;
+margin-bottom: 30px;
+    }
+
+    @include desktop{
+        font-size: 36px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+        margin-bottom: 50px;
+    }
 }
 
 .team-list{display: flex; gap: 30px;
