--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -52,13 +52,18 @@
             border-radius: 4px;}
         }
         
-        .button-list{padding-top: 60px;   
+        .button-list{ 
+            @include mobile{
+                padding-top: 60px;   
             padding-bottom: 60px;
+            }
              @media screen and (min-width: 768px) {
-           
+                padding-top: 60px;   
+                padding-bottom: 60px;
           }
           @media screen and (min-width: 1200px) {
-            
+            padding-top: 94px;   
+            padding-bottom: 94px;
           }}
         
         .btn-item {
