--- a/sass/components/_check.scss
+++ b/sass/components/_check.scss
@@ -7,6 +7,18 @@
     letter-spacing: 0.03em; 
     color: #757575;
     @extend %justify-list ;
+    @include mobile {
+    font-size: 12px;
+line-height: 1.16;
+letter-spacing: 0.03em;
+
+    }
+    @include desktop {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em; 
+    
+    }
 }
 
 .check-text a {
