--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -11,18 +11,19 @@
     @include mobile {
         width: 480px;
         flex-direction: column;
-        flex-wrap: wrap;
+        
       }
     @include tablet{
         width: 768px;
         flex-direction: row;
         justify-content: center;
+        flex-wrap: wrap;
         
     }
     @include desktop {
        width: 1200px;
        justify-content: flex-start;
-       flex-wrap: nowrap;
+       
     }
     
 }
@@ -81,7 +82,9 @@
         align-items: center;
     }
     @include desktop{
-        display: block;
+        display: flex;
+        flex-direction: column;
+        align-items: baseline;
     }
    
 }
@@ -204,7 +207,9 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
     @include tablet{
         margin-bottom: 30px;
            }
-
+@include desktop {
+    width: 358px;
+}
 }
 
 .footer-link{
@@ -242,8 +247,8 @@ margin-left: 93px;
 }
 
     @include tablet{
-    flex-direction: row;
-    align-items: baseline;
+    flex-direction: column;
+    align-items: center;
     flex-wrap: wrap;
     justify-content: center;
     }
@@ -273,6 +278,8 @@ flex-wrap: nowrap;
         align-items: center;
     }
     @include desktop{
-        display: block;
+        display: flex;
+        flex-direction: column;
+        align-items: baseline;
     }
 }
