--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,9 +1,16 @@
 .header{
     background-color: #ffffff;
     border: 1px solid #ECECEC;
-    padding-top: 24px;
-    padding-bottom: 24px;
+    
     display: flex;
+    @include mobile{
+        padding-top: 16px;
+        padding-bottom: 16px;
+    }
+    @include tablet {
+        padding-top: 24px;
+        padding-bottom: 24px;
+    }
 }
 .nav{
    @extend %aligin-list;
