--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -9,7 +9,15 @@
     border-radius: 5px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 40px;
+    @include mobile{
+        width: 450px;
     }
+    @include desktop {
+        width: 528px;
+    }
+    }
+
+    
     
 .modal-title{
     font-family: 'Roboto';
@@ -39,6 +47,14 @@
 .modal-field-check{
     margin-bottom: 30px;
     margin-top: 20px;
+    min-width: 370px;
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 .modal-input{
