--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -109,6 +109,10 @@
     @extend %justify-list ;
     letter-spacing: 0.06em;
     color: #FFFFFF;
-    margin-left: 125px;
+   
+    @include mobile {
+        margin-left: 85px;
+    }
+    @include desktop{ margin-left: 125px;}
     }
     
