--- a/sass/components/_check.scss
+++ b/sass/components/_check.scss
@@ -6,18 +6,23 @@
     line-height: 1.71;
     letter-spacing: 0.03em; 
     color: #757575;
-    @extend %justify-list ;
+    
     @include mobile {
     font-size: 12px;
 line-height: 1.16;
 letter-spacing: 0.03em;
+display: flex;
+justify-content: flex-start;
+align-items: baseline;
 
     }
     @include desktop {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em; 
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
     }
 }
 
