--- a/css/main.css
+++ b/css/main.css
@@ -952,6 +952,7 @@ body {
   width: 100%;
   height: 100%;
   background: #FFFFFF;
+  align-items: stretch;
   border: 1px solid #EEEEEE;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: calc((100% - 0px) / 1);
@@ -1011,17 +1012,10 @@ body {
 
 .portfolio-link {
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
   text-decoration: none;
   color: #212121;
-  -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
