--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -42,12 +42,13 @@
     color: #757575; 
     }
     
-.modal-field{margin-bottom: 10px;}
+.modal-field{
+    margin-bottom: 10px;}
 
 .modal-field-check{
     margin-bottom: 30px;
     margin-top: 20px;
-    min-width: 370px;
+    
    
 }
 
