--- a/sass/components/_check.scss
+++ b/sass/components/_check.scss
@@ -2,9 +2,6 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em; 
     color: #757575;
     
     @include mobile {
@@ -14,6 +11,7 @@ letter-spacing: 0.03em;
 display: flex;
 justify-content: flex-start;
 align-items: baseline;
+
 
     }
     @include desktop {
@@ -27,7 +25,8 @@ align-items: baseline;
 }
 
 .check-text a {
-    color: #2196F3;
+    color: #2196F3; 
+    margin-left: 4px;
 }
 
 .check-text span {
